Added Logo and changed login visuals

--- a/src/routes/login/styles/login.css
+++ b/src/routes/login/styles/login.css
@@ -7,3 +7,19 @@
     justify-content: center;
     align-items: center;
 }
+
+.container h1 {
+    text-align: center;
+    margin-bottom: 0px;
+}
+
+.container h2 {
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+
+.container img {
+    display: flex;
+    margin: auto;
+}
